fixed out of place Score & navButtons and added margins/padding to the top and bottom of quiz so spacing is improved

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -92,11 +92,15 @@ h4 {
   text-align: center;
   display: none;
 
-  > h2 {
+  h2 {
+    padding: 1.4rem;
+  }
+  > #quizQuestionAndNumber {
+    margin-top: 1rem;
     padding: 2rem;
   }
 
-  #quizNavBtns {
+  #quizNavBtnsScore {
     position: relative;
     top: 1rem;
     button {
@@ -147,16 +151,17 @@ h4 {
 }
 
 .quizOne {
-  h2 {
-    padding: 1.4rem;
+  > #quizQuestionAndNumber {
+    margin-top: 0rem;
+    padding: 1rem;
   }
-
   > #quizNavBtnsScore {
     position: relative;
-    top: 1rem;
+    top: 0rem;
   }
   > #Frame {
     display: block;
+    height: 25rem;
   }
 
   > #answerInput {
@@ -189,10 +194,6 @@ h4 {
 }
 
 .quizTwo {
-  h2 {
-    padding: 1.4rem;
-  }
-
   > #quizNavBtnsScore {
     position: relative;
     top: 3rem;
@@ -205,8 +206,8 @@ h4 {
     display: grid;
     margin: 0 auto;
     grid-row: auto auto;
-    height: 37rem;
-    width: 37rem;
+    height: 30rem;
+    width: 30rem;
     // grid-template-columns: 500px 500px;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr;
@@ -219,8 +220,8 @@ h4 {
       background-color: transparent;
       overflow: hidden;
       border: 4px solid #ccc;
-      height: 20rem;
-      width: 20rem;
+      height: 16rem;
+      width: 16rem;
       margin: 0;
       padding: 0;
       background-position: center;
